# Boykov-Kolmogorov_Stitching

./: CMakeLists.txt  main.cpp
